--- a/door_pier.html
+++ b/door_pier.html
@@ -65,6 +65,7 @@
 
 
 <hr class ="line">
+
 <!-- collection -->
 
 <div class = "subtitle_right" data-aos="fade-up"
@@ -74,109 +75,109 @@ data-aos-duration="1000">
 
  <div class = "collection_container" data-aos="fade-up"
  data-aos-duration="2000">
-    <div class = "collection"><img src="assets/pier/pier_1.jpg">
+    <div class = "collection"><img src="assets/pier/pier_1.jpg"  alt="Drum-shaped Pier with Qilin">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Qilin</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_2.jpg">
+    <div class = "collection"><img src="assets/pier/pier_2.jpg"  alt="Drum-shaped Pier with Lion">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_4.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_4.jpeg"  alt="Rectangular Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_5.jpg">
+    <div class = "collection"><img src="assets/pier/pier_5.jpg"  alt="Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_6.jpg">
+    <div class = "collection"><img src="assets/pier/pier_6.jpg"  alt="Rectangular Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_7.jpg">
+    <div class = "collection"><img src="assets/pier/pier_7.jpg"  alt="Drum-shaped Pier with Lion">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_8.jpg">
+    <div class = "collection"><img src="assets/pier/pier_8.jpg"  alt="Rectangular Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier with flowers</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_10.jpg">
+    <div class = "collection"><img src="assets/pier/pier_10.jpg" alt="Rectangular Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_9.jpg">
+    <div class = "collection"><img src="assets/pier/pier_9.jpg" alt="Drum-shaped Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_11.jpg">
+    <div class = "collection"><img src="assets/pier/pier_11.jpg" alt="Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_12.jpg">
+    <div class = "collection"><img src="assets/pier/pier_12.jpg" alt="Rectangular Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_13.jpg">
+    <div class = "collection"><img src="assets/pier/pier_13.jpg" alt="Drum-shaped Pier with dragon">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with dragon</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
 
-    <div class = "collection"><img src="assets/pier/pier_14.jpg">
+    <div class = "collection"><img src="assets/pier/pier_14.jpg" alt="Rectangular Pier with lion">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier with lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
 
-    <div class = "collection"><img src="assets/pier/pier_15.jpg">
+    <div class = "collection"><img src="assets/pier/pier_15.jpg"alt="Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
 
-    <div class = "collection"><img src="assets/pier/pier_16.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_16.jpeg" alt="Drum-shaped Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_17.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_17.jpeg" alt="Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_18.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_18.jpeg" alt="Rectangular Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_19.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_19.jpeg"alt="Rectangular Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_20.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_20.jpeg" alt="Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_21.jpeg">
+    <div class = "collection"><img src="assets/pier/pier_21.jpeg" alt="Rectangular Pier">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_22.jpg">
+    <div class = "collection"><img src="assets/pier/pier_22.jpg" alt="Rectangular Pier with flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
-    <div class = "collection"><img src="assets/pier/pier_3.jpg">
+    <div class = "collection"><img src="assets/pier/pier_3.jpg" alt="High-class Drum-shaped Pier">
         <div class = "collection_text_box"> <div class = "collection_name">High-class Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
