--- a/gate_building.html
+++ b/gate_building.html
@@ -101,14 +101,14 @@ data-aos-duration="2000">
       <div class="carousel">
           <div>
             <div class="carousel_title"> Guang-Liang Gate </div>
-            <div><img src="assets/gates/guangliang_2.jpg"></div>
+            <div><img src="assets/gates/guangliang_2.jpg"  alt="The Embedded Gate"></div>
           </div>
 
-          <div> <div class="carousel_title"> Jin-Zhu Gate </div><img src="assets/gates/jinzhu_2.jpg"></div>
-          <div> <div class="carousel_title"> Ru-Yi Gate </div><img src="assets/gates/ruyi_4.jpeg"></div>
-          <div> <div class="carousel_title"> Man-Zi Gate </div><img src="assets/gates/manzi_1.jpg"></div>
-          <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg"></div>
-          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG"></div>
+          <div> <div class="carousel_title"> Jin-Zhu Gate </div><img src="assets/gates/jinzhu_2.jpg" alt="The Guang-liang Gate"></div>
+          <div> <div class="carousel_title"> Ru-Yi Gate </div><img src="assets/gates/ruyi_4.jpeg" alt="The Jin-zhu Gate"></div>
+          <div> <div class="carousel_title"> Man-Zi Gate </div><img src="assets/gates/manzi_1.jpg" alt="The Ru-yi Gate"></div>
+          <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg" alt="The man-zi Gate"></div>
+          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG" alt="The Embedded Gate"></div>
       </div>
 </div> 
 <!-- text carousel, credits to https://codepen.io/james60708/pen/mvqKyz -->
