--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@ data-aos-duration="2000">
         <img src="assets/pier/pier_5.jpg" alt="A door pier artifact">
     </div>
     <div class = "small_image">
-        <img src="assets/pier/pier_7.jpg" alt="A door pier artifact">
+        <img src="assets/pier/pier_7.jpg" alt="A rectangular door pier">
     </div>
 </div>
 
 <div class = "explore_box_1" >
     <div class = "large_image">
-        <a href = "./brick_carving.html"><img class = "large_image_blur" src="assets/brick-carving/brick_8.jpeg" alt="A door pier artifact">
+        <a href = "./brick_carving.html"><img class = "large_image_blur" src="assets/brick-carving/brick_8.jpeg" alt="A brick carving on a gate">
             <div class="overlay-text">Brick Carvings <br> >>> </div> </a>
     </div>
     <div class = "small_image">
-        <img src="assets/brick-carving/brick_1.jpeg" alt="A door pier artifact">
+        <img src="assets/brick-carving/brick_1.jpeg" alt="A brick carving artifact">
     </div>
 </div>
 
