--- a/brick_carving.html
+++ b/brick_carving.html
@@ -41,9 +41,9 @@
 </div>
 <hr class ="line">
 
-<div class = "subtitle"  data-aos="fade-right" data-aos-duration="1000">
+<h1 class = "subtitle"  data-aos="fade-right" data-aos-duration="1000">
     BRICK CARVINGS
- </div>
+</h1>
 
 
 <!-- Introduction -->
@@ -71,51 +71,51 @@ data-aos-duration="1000">
 
  <div class = "collection_container" data-aos="fade-up"
  data-aos-duration="2000">
-    <div class = "collection"><img src="assets/brick-carving/brick_1.jpeg" alt="Deer and Plum Flowers">
+    <div class = "collection"><img src="assets/brick-carving/brick_1.jpeg" alt="A Brick carving with Deer and Plum Flowers">
         <div class = "collection_text_box"> <div class = "collection_name">Deer and Plum Blossoms</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_2.jpeg" alt="Birds and Pine">
+    <div class = "collection"><img src="assets/brick-carving/brick_2.jpeg" alt="A Brick carving with Birds and Pine">
         <div class = "collection_text_box"> <div class = "collection_name">Birds and Pine</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_3.jpeg" alt="Seasons">
+    <div class = "collection"><img src="assets/brick-carving/brick_3.jpeg" alt="A Brick carving showing Seasons">
         <div class = "collection_text_box"> <div class = "collection_name">Seasons</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_4.jpeg" alt="Treasure Cabinet">
+    <div class = "collection"><img src="assets/brick-carving/brick_4.jpeg" alt="A Brick carving showing Treasure Cabinet">
         <div class = "collection_text_box"> <div class = "collection_name">Treasure Cabinet</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_5.jpeg" alt="Peony">
+    <div class = "collection"><img src="assets/brick-carving/brick_5.jpeg" alt="A Brick carving showing Peony">
         <div class = "collection_text_box"> <div class = "collection_name">Peony</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_6.jpeg" alt="Sacred Beast">
+    <div class = "collection"><img src="assets/brick-carving/brick_6.jpeg" alt="A Brick carving showing Sacred Beast">
         <div class = "collection_text_box"> <div class = "collection_name">Sacred Beast</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_7.jpeg" alt="Treasure Cabinet">
+    <div class = "collection"><img src="assets/brick-carving/brick_7.jpeg" alt="A Brick carving showing Treasure Cabinet">
         <div class = "collection_text_box"> <div class = "collection_name">Treasure Cabinet</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_8.jpeg" alt="Peony and Pine">
+    <div class = "collection"><img src="assets/brick-carving/brick_8.jpeg" alt="A Brick carving showing Peony and Pine">
         <div class = "collection_text_box"> <div class = "collection_name">Peony and Pine</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_9.jpeg" alt="Flowers and Bats">
+    <div class = "collection"><img src="assets/brick-carving/brick_9.jpeg" alt="A Brick carving showing Flowers and Bats">
         <div class = "collection_text_box"> <div class = "collection_name">Flowers and Bats</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_10.jpg" alt="Peony">
+    <div class = "collection"><img src="assets/brick-carving/brick_10.jpg" alt="A Brick carving showing Peony">
         <div class = "collection_text_box"> <div class = "collection_name">Peony</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_11.jpeg" alt="Roof Ridge">
+    <div class = "collection"><img src="assets/brick-carving/brick_11.jpeg" alt="A Brick carving showing Roof Ridge">
         <div class = "collection_text_box"> <div class = "collection_name">Roof Ridge</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/brick-carving/brick_12.JPG" alt="Shadow Wall">
+    <div class = "collection"><img src="assets/brick-carving/brick_12.JPG" alt="A Brick carving on a Shadow Wall">
         <div class = "collection_text_box"> <div class = "collection_name">Shadow Wall</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
