--- a/gate_building.html
+++ b/gate_building.html
@@ -51,9 +51,9 @@
 
 <!-- introduction section -->
 
-<div class = "subtitle">
+<h1 class = "subtitle">
     GATE BUILDINGS
-    </div>
+</h1>
 
 
 <div  id ="background_4" alt="A majestic gate building">
@@ -104,11 +104,11 @@ data-aos-duration="2000">
             <div><img src="assets/gates/guangliang_2.jpg"  alt="The Embedded Gate"></div>
           </div>
 
-          <div> <div class="carousel_title"> Jin-Zhu Gate </div><img src="assets/gates/jinzhu_2.jpg" alt="The Guang-liang Gate"></div>
-          <div> <div class="carousel_title"> Ru-Yi Gate </div><img src="assets/gates/ruyi_4.jpeg" alt="The Jin-zhu Gate"></div>
-          <div> <div class="carousel_title"> Man-Zi Gate </div><img src="assets/gates/manzi_1.jpg" alt="The Ru-yi Gate"></div>
-          <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg" alt="The man-zi Gate"></div>
-          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG" alt="The Embedded Gate"></div>
+          <div> <div class="carousel_title"> Jin-Zhu Gate </div><img src="assets/gates/jinzhu_2.jpg" alt="The enlarged image of Guang-liang Gate"></div>
+          <div> <div class="carousel_title"> Ru-Yi Gate </div><img src="assets/gates/ruyi_4.jpeg" alt="The enlarged image of Jin-zhu Gate"></div>
+          <div> <div class="carousel_title"> Man-Zi Gate </div><img src="assets/gates/manzi_1.jpg" alt="The enlarged image of Ru-yi Gate"></div>
+          <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg" alt="The enlarged image of man-zi Gate"></div>
+          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG" alt="The enlarged image of Embedded Gate"></div>
       </div>
 </div> 
 <!-- text carousel, credits to https://codepen.io/james60708/pen/mvqKyz -->
