--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     <a class = "body_text" data-aos="fade-right">
     Welcome to the living museum of
     </a>
-    <a class = "title"  data-aos="fade-left"
+    <h1 class = "title"  data-aos="fade-left"
     data-aos-anchor="#example-anchor"
     data-aos-offset="500"
     data-aos-duration="500">
     BEIJING HUTONGS
-    </a>
+</h1>
 </div>
 
 
