--- a/brick_carving.html
+++ b/brick_carving.html
@@ -26,7 +26,7 @@
     <a href = "./index.html" class = "title">
         Hutong Artifacts
        </a>
-     <b class = "menu_box">
+     <nav class = "menu_box">
          <a href = "./gate_building.html" class = "menu">
              Gate Building
          </a>
@@ -36,7 +36,7 @@
          <a href = "./brick_carving.html" class = "menu_bold">
              Brick Carving
          </a>
-     </b>
+        </nav>
  
 </div>
 <hr class ="line">
