--- a/door_pier.html
+++ b/door_pier.html
@@ -26,7 +26,7 @@
         Hutong Artifacts
        </a>
 
-     <b class = "menu_box">
+     <nav class = "menu_box">
          <a href = "./gate_building.html" class = "menu">
              Gate Building
          </a>
@@ -36,7 +36,7 @@
          <a href = "./brick_carving.html" class = "menu">
              Brick Carving
          </a>
-     </b>
+        </nav>
  
 </div>
 <hr class ="line">
@@ -91,7 +91,7 @@ data-aos-duration="1000">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
-    <div class = "collection"><img src="assets/pier/pier_6.jpg"  alt="An image of Rectangular Pier">
+    <div class = "collection"><img src="assets/pier/pier_6.jpg"  alt="An image of Rectangular Pier with plants">
         <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
@@ -148,7 +148,7 @@ data-aos-duration="1000">
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_17.jpeg" alt="An image of Drum-shaped Pier">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">High class large Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
