--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href = "./index.html" class = "title">
             Hutong Artifacts
            </a>
-    <b class = "menu_box">
+    <nav class = "menu_box">
         <a href = "./gate_building.html" class = "menu">
             Gate Building
         </a>
@@ -30,7 +30,7 @@
         <a href = "./brick_carving.html" class = "menu">
             Brick Carving
         </a>
-    </b>
+    </nav>
 
 </div>
 <hr class ="line">
