--- a/gate_building.html
+++ b/gate_building.html
@@ -33,7 +33,7 @@
     <a href = "./index.html" class = "title">
         Hutong Artifacts
        </a>
-     <b class = "menu_box">
+     <nav class = "menu_box">
          <a href = "./gate_building.html" class = "menu_bold">
              Gate Building
          </a>
@@ -43,7 +43,7 @@
          <a href = "./brick_carving.html" class = "menu">
              Brick Carving
          </a>
-     </b>
+        </nav>
  
 </div>
 <hr class ="line">
