--- a/gate_building.html
+++ b/gate_building.html
@@ -101,7 +101,7 @@ data-aos-duration="2000">
       <div class="carousel">
           <div>
             <div class="carousel_title"> Guang-Liang Gate </div>
-            <div><img src="assets/gates/guangliang_2.jpg"  alt="The Embedded Gate"></div>
+            <div><img src="assets/gates/guangliang_2.jpg"  alt="The enlarged image of The Embedded Gate"></div>
           </div>
 
           <div> <div class="carousel_title"> Jin-Zhu Gate </div><img src="assets/gates/jinzhu_2.jpg" alt="The enlarged image of Guang-liang Gate"></div>
